--- a/index.html
+++ b/index.html
@@ -5,21 +5,74 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MrPictures</title>
-  <link rel="stylesheet" href="./style/style.css">
+  <link rel="stylesheet" href="css/style.css">
+  <!-- font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-  <nav class="navbar">navbar</nav>
-  <section class="hero-bcg">
-    <h1 class="hero-title">Mannhy Monteverde</h1>
-    <h4 class="hero-subTitle">Fotografo</h4>
-    <button type="button" class="hero-btn">
-      <a href="#" class="hero-link">See More</a>
-    </button>
-  </section>
-  <footer class="footer"></footer>
+  <!-- header -->
+  <header id="header" class="vh-100 flex">
+    <div class="container">
+      <div class="header-content">
+        <h1 class="hero-title">I'm a <br><span class="typewrite" data-loop="yes" data-speed="100" data-delay="2000"
+            data-words='["photographer", "videographer", "video editor", "cook"]'></span></h1>
+        <h3 class="header-name">Mannhy Monteverde</h3>
 
-  <script src="./js/app.js"></script>
+        <ul class="social-links">
+          <li>
+            <a href="https://www.instagram.com/mrpictures3/" class="flex">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="flex">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </header>
+
+  <main>
+    <section id="about" class="about py-7">
+      <div class="container">
+        <div class="about-content grid">
+          <div class="about-left">
+            <img src="./imgs/mannhy.jpg" alt="#">
+          </div>
+          <div class="about-right">
+            <div class="title">
+              <h2>About Me</h2>
+            </div>
+            <p class="lead">
+              I am from Venezuela, where we welcome you with coffee at home, based in Argentina after having a stay in
+              Peru.
+            </p>
+            <p class="lead">
+              We can all take a photo, but capturing the right mood or moment is a bit more challenging. My place in the
+              world is behind a camera: there I feel connected to everything else.
+            </p>
+            <p class="lead">
+              I fell in love with photography when I realized that I could tell stories through images. I take photos
+              out of an insatiable need to share these narratives with everyone around me. Photography allows me to do
+              it every day.
+            </p>
+            <a href="#work" class="btn-down">
+              <i class="fa-solid fa-chevron-down"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+
+  <!-- typewriting js -->
+  <script src="js/typewriting.js"></script>
 </body>
 
 </html>
