--- a/index.html
+++ b/index.html
@@ -13,23 +13,22 @@
 </head>
 
 <body>
-  <!-- header -->
   <header id="header" class="vh-100 flex">
     <div class="container">
       <div class="header-content">
-        <h1 class="hero-title">I'm a <br><span class="typewrite" data-loop="yes" data-speed="100" data-delay="2000"
+        <h1>I'm a <br><span class="typewrite" data-loop="yes" data-speed="100" data-delay="2000"
             data-words='["photographer", "videographer", "video editor", "cook"]'></span></h1>
-        <h3 class="header-name">Mannhy Monteverde</h3>
+        <h3>Mannhy Monteverde</h3>
 
         <ul class="social-links">
           <li>
-            <a href="https://www.instagram.com/mrpictures3/" class="flex">
-              <i class="fab fa-instagram"></i>
+            <a href="#" class="flex">
+              <i class="fab fa-facebook-f"></i>
             </a>
           </li>
           <li>
             <a href="#" class="flex">
-              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-instagram"></i>
             </a>
           </li>
         </ul>
@@ -69,6 +68,82 @@
       </div>
     </section>
   </main>
+
+  <!-- WORK -->
+  <section id="work" class="vh-100 flex">
+    <div class="container">
+      <div class="work-content">
+        <div class="title">
+          <h2>what am i doing?</h2>
+        </div>
+
+        <ul class="work-top grid">
+          <li class="lead">
+            <i class="fas fa-dot-circle"></i> I work in a cafeteria as a cook, the rest of the time I do free
+            photography and editing.
+          </li>
+          <li class="lead">
+            <i class="fas fa-dot-circle"></i> I am currently doing photography studies empirically.
+          </li>
+        </ul>
+
+        <div class="work-bottom grid">
+          <div>
+            <span class="icon">
+              <img src="imgs/wildlife-icon.png">
+            </span>
+            <h3>Wildlife</h3>
+          </div>
+          <div>
+            <span class="icon">
+              <img src="imgs/portrait-icon.png">
+            </span>
+            <h3>Portrait</h3>
+          </div>
+          <div>
+            <span class="icon">
+              <img src="imgs/landscape-icon.png">
+            </span>
+            <h3>Landscape</h3>
+          </div>
+          <div>
+            <span class="icon">
+              <img src="imgs/family-icon.png">
+            </span>
+            <h3>Family</h3>
+          </div>
+        </div>
+        <a href="#portfolio" class="btn-down"></a>
+      </div>
+    </div>
+  </section>
+
+  <!-- PORTFOLIO -->
+  <section id="portfolio" class="vh-100 py-7">
+    <div class="container">
+      <div class="portfolio-content">
+        <div class="title">
+          <h2>my last works</h2>
+          <a href="#contact" class="btn-down">
+            <i class="fas fa-chevron-down"></i>
+          </a>
+        </div>
+
+        <div class="portfolio-grid grid">
+          <div><img src="imgs/avenidaNoche.jpg"></div>
+          <div><img src="imgs/persona.jpg"></div>
+          <div><img src="imgs/mom.jpg"></div>
+          <div><img src="imgs/avenida2.jpg"></div>
+          <div><img src="imgs/cafe.jpg"></div>
+          <div><img src="imgs/bici.jpg"></div>
+          <div><img src="imgs/palma.jpg"></div>
+          <div><img src="imgs/camara.jpg"></div>
+          <div><img src="imgs/chevy.jpg"></div>
+          <div><img src="imgs/trafico.jpg"></div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
   <!-- typewriting js -->
