--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </a>
           </li>
           <li>
-            <a href="#" class="flex">
+            <a href="https://www.instagram.com/mrpictures3/" class="flex">
               <i class="fab fa-instagram"></i>
             </a>
           </li>
@@ -37,11 +37,12 @@
   </header>
 
   <main>
+    <!-- about section -->
     <section id="about" class="about py-7">
       <div class="container">
         <div class="about-content grid">
           <div class="about-left">
-            <img src="./imgs/mannhy.jpg" alt="#">
+            <img src="imgs/mannhy.jpg" alt="">
           </div>
           <div class="about-right">
             <div class="title">
@@ -61,90 +62,153 @@
               it every day.
             </p>
             <a href="#work" class="btn-down">
-              <i class="fa-solid fa-chevron-down"></i>
+              <i class="fas fa-chevron-down"></i>
             </a>
           </div>
         </div>
       </div>
     </section>
-  </main>
+    <!-- end of about section -->
 
-  <!-- WORK -->
-  <section id="work" class="vh-100 flex">
-    <div class="container">
-      <div class="work-content">
-        <div class="title">
-          <h2>what am i doing?</h2>
-        </div>
+    <!-- work section -->
+    <section id="work" class="vh-100 flex py-7">
+      <div class="container">
+        <div class="work-content">
+          <div class="title">
+            <h2>what am i doing?</h2>
+          </div>
+          <ul class="work-top grid">
+            <li class="lead">
+              <i class="fas fa-dot-circle"></i> I work in a cafeteria as a cook, the rest of the time I do free
+              photography and editing.
+            </li>
+            <li class="lead">
+              <i class="fas fa-dot-circle"></i> I am currently doing photography studies empirically.
+            </li>
+          </ul>
 
-        <ul class="work-top grid">
-          <li class="lead">
-            <i class="fas fa-dot-circle"></i> I work in a cafeteria as a cook, the rest of the time I do free
-            photography and editing.
-          </li>
-          <li class="lead">
-            <i class="fas fa-dot-circle"></i> I am currently doing photography studies empirically.
-          </li>
-        </ul>
-
-        <div class="work-bottom grid">
-          <div>
-            <span class="icon">
-              <img src="imgs/wildlife-icon.png">
-            </span>
-            <h3>Wildlife</h3>
+          <div class="work-bottom grid">
+            <div>
+              <span class="icon"><img src="imgs/wildlife-icon.png"></span>
+              <h3>Wildlife</h3>
+            </div>
+            <div>
+              <span class="icon"><img src="imgs/portrait-icon.png"></span>
+              <h3>Portrait</h3>
+            </div>
+            <div>
+              <span class="icon"><img src="imgs/landscape-icon.png"></span>
+              <h3>Landscape</h3>
+            </div>
+            <div>
+              <span class="icon"><img src="imgs/family-icon.png"></span>
+              <h3>Family</h3>
+            </div>
           </div>
-          <div>
-            <span class="icon">
-              <img src="imgs/portrait-icon.png">
-            </span>
-            <h3>Portrait</h3>
-          </div>
-          <div>
-            <span class="icon">
-              <img src="imgs/landscape-icon.png">
-            </span>
-            <h3>Landscape</h3>
-          </div>
-          <div>
-            <span class="icon">
-              <img src="imgs/family-icon.png">
-            </span>
-            <h3>Family</h3>
-          </div>
-        </div>
-        <a href="#portfolio" class="btn-down"></a>
-      </div>
-    </div>
-  </section>
-
-  <!-- PORTFOLIO -->
-  <section id="portfolio" class="vh-100 py-7">
-    <div class="container">
-      <div class="portfolio-content">
-        <div class="title">
-          <h2>my last works</h2>
-          <a href="#contact" class="btn-down">
+          <a href="#portfolio" class="btn-down btn-down-white">
             <i class="fas fa-chevron-down"></i>
           </a>
         </div>
+      </div>
+    </section>
+    <!-- end of work section -->
 
-        <div class="portfolio-grid grid">
-          <div><img src="imgs/avenidaNoche.jpg"></div>
-          <div><img src="imgs/persona.jpg"></div>
-          <div><img src="imgs/mom.jpg"></div>
-          <div><img src="imgs/avenida2.jpg"></div>
-          <div><img src="imgs/cafe.jpg"></div>
-          <div><img src="imgs/bici.jpg"></div>
-          <div><img src="imgs/palma.jpg"></div>
-          <div><img src="imgs/camara.jpg"></div>
-          <div><img src="imgs/chevy.jpg"></div>
-          <div><img src="imgs/trafico.jpg"></div>
+    <!-- portfolio section -->
+    <section id="portfolio" class="vh-100 py-7">
+      <div class="container">
+        <div class="portfolio-content">
+          <div class="title">
+            <h2>my last works</h2>
+            <a href="#contact" class="btn-down">
+              <i class="fas fa-chevron-down"></i>
+            </a>
+          </div>
+
+          <div class="portfolio-grid grid">
+            <div><img src="imgs/avenidaNoche.jpg"></div>
+            <div><img src="imgs/persona.jpg"></div>
+            <div><img src="imgs/mom.jpg"></div>
+            <div><img src="imgs/avenida2.jpg"></div>
+            <div><img src="imgs/cafe.jpg"></div>
+            <div><img src="imgs/bici.jpg"></div>
+            <div><img src="imgs/palma.jpg"></div>
+            <div><img src="imgs/camara.jpg"></div>
+            <div><img src="imgs/chevy.jpg"></div>
+            <div><img src="imgs/trafico.jpg"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end of portfolio section -->
+
+    <!-- contact section -->
+    <section id="contact" class="py-7">
+      <div class="container">
+        <div class="contact-content flex">
+          <div class="contact-left">
+            <div class="title">
+              <h2>contact with me</h2>
+            </div>
+            <p class="lead"><i class="fas fa-phone-alt"></i> +54 11-5723-5681</p>
+            <p class="lead"><i class="fas fa-envelope"></i> mail@gmail.com</p>
+            <form action="">
+              <input type="text" class="form-control" placeholder="Your name here ...">
+              <input type="email" class="form-control" placeholder="Your email here">
+              <input type="submit" class="btn-submit btn" value="Submit">
+            </form>
+          </div>
+
+          <div class="contact-right">
+            <img src="imgs/mannhy5.jpg" alt="contact image">
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end of contact section -->
+
+    <!-- instagram section -->
+    <section id="insta" class="py-7">
+      <div class="container">
+        <div class="insta-content">
+          <div class="title">
+            <h2>instagram</h2>
+            <a href="#footer" class="btn-down btn-down-white">
+              <i class="fas fa-chevron-down"></i>
+            </a>
+          </div>
+          <div class="insta-grid grid">
+            <div><img src="imgs/edificoAntiguo.jpg"></div>
+            <div><img src="imgs/moto.jpg"></div>
+            <div><img src="imgs/edificioAntiguo2.jpg"></div>
+            <div><img src="imgs/bus.jpg"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end of instagram section -->
+  </main>
+
+  <footer id="footer" class="py-7">
+    <div class="container">
+      <div class="footer-content">
+        <div>
+          <h3>MANNHY MONTEVERDE</h3>
+          <div><img src="imgs/mannhy.jpg" "photo about me"></div>
+        </div>
+
+        <div>
+          <h3>Links</h3>
+          <ul class="flex">
+            <li><a href="#">About Me</a></li>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact Me</a></li>
+            <li><a href="#">Instagram</a></li>
+          </ul>
         </div>
       </div>
     </div>
-  </section>
-
+  </footer>
 
   <!-- typewriting js -->
   <script src="js/typewriting.js"></script>
