--- a/index.html
+++ b/index.html
@@ -10,9 +10,18 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- swal css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.7.5/sweetalert2.min.css"
+    integrity="sha512-InYSgxgTnnt8BG3Yy0GcpSnorz5gxHvT6OEoRWj91Gg+RvNdCiAharnBe+XFIDS754Kd9TekdjXw3V7TAgh6Vw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- bs -->
+  <!-- BUG: check this because broke the form -->
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" -->
+  <!--   integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous"> -->
 </head>
 
 <body>
+  <!-- TODO: delete all useless media -->
   <header id="header" class="vh-100 flex">
     <div class="container">
       <div class="header-content">
@@ -129,10 +138,10 @@
             <div><img src="imgs/persona.jpg"></div>
             <div><img src="imgs/mom.jpg"></div>
             <div><img src="imgs/avenida2.jpg"></div>
-            <div><img src="imgs/cafe.jpg"></div>
+            <div><img src="imgs/atardecerObelisco.jpg"></div>
             <div><img src="imgs/bici.jpg"></div>
-            <div><img src="imgs/palma.jpg"></div>
-            <div><img src="imgs/camara.jpg"></div>
+            <div><img src="imgs/iglesia.jpg"></div>
+            <div><img src="imgs/ajedrez.jpg"></div>
             <div><img src="imgs/chevy.jpg"></div>
             <div><img src="imgs/trafico.jpg"></div>
           </div>
@@ -151,10 +160,34 @@
             </div>
             <p class="lead"><i class="fas fa-phone-alt"></i> +54 11-5723-5681</p>
             <p class="lead"><i class="fas fa-envelope"></i> mail@gmail.com</p>
-            <form action="">
-              <input type="text" class="form-control" placeholder="Your name here ...">
-              <input type="email" class="form-control" placeholder="Your email here">
-              <input type="submit" class="btn-submit btn" value="Submit">
+
+            <form method="" enctype="multipart/form-data" class="contact-form needs-validation" id="form-id" novalidate>
+
+              <div class="form-input">
+                <input type="text" name="name" class="form-control" placeholder="Your name here ... *"
+                  title="words only and empty spaces" pattern="^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$" autocomplete="off" required>
+
+                <!-- TODO: check this -->
+                <!-- <div class="invalid-feedback"> -->
+                <!--   <i class="fas fa-times"></i> Words and spaces only -->
+                <!-- </div> -->
+              </div>
+
+              <div class="form-input form-input">
+                <input type="submit" class="btn-submit btn form-input" value="Submit">
+
+                <!-- TODO: check this -->
+
+                <!--   <i class="fas fa-times"></i> Invalid format -->
+                <!-- </div> -->
+              </div>
+
+              <!-- form config -->
+              <!-- TODO: descoment this -->
+              <!-- <input type="hidden" name="_next" value="https://mrpictures.netlify.app/" /> -->
+              <input type="hidden" name="_template" value="table" />
+              <input type="hidden" name="_subject" value="Consulta desde la web de MrPictures" />
+              <input type="hidden" name="_captcha" value="false" />
             </form>
           </div>
 
@@ -179,8 +212,8 @@
           <div class="insta-grid grid">
             <div><img src="imgs/edificoAntiguo.jpg"></div>
             <div><img src="imgs/moto.jpg"></div>
+            <div><img src="imgs/planta.jpg"></div>
             <div><img src="imgs/edificioAntiguo2.jpg"></div>
-            <div><img src="imgs/bus.jpg"></div>
           </div>
         </div>
       </div>
@@ -210,8 +243,17 @@
     </div>
   </footer>
 
-  <!-- typewriting js -->
+  <!-- own js -->
   <script src="js/typewriting.js"></script>
+  <script src="js/form.js"></script>
+  <!-- swal -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.7.5/sweetalert2.min.js"
+    integrity="sha512-jt82OWotwBkVkh5JKtP573lNuKiPWjycJcDBtQJ3BkMTzu1dyu4ckGGFmDPxw/wgbKnX9kWeOn+06T41BeWitQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!-- bsjs -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" -->
+  <!--   integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" -->
+  <!--   crossorigin="anonymous"></script> -->
 </body>
 
 </html>
