compress media files add form validations

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <p class="lead"><i class="fas fa-phone-alt"></i> +54 11-5723-5681</p>
             <p class="lead"><i class="fas fa-envelope"></i> mannhyr572@gmail.com</p>
 
-            <form method="POST" action="./js/mailer.php" class="contact-form" id="form-id" novalidate>
+            <form class="contact-form" id="form-id" novalidate>
               <!-- name field -->
               <div class="input-control">
                 <input type="text" name="name" id="userName" class="form-control" placeholder="Your name here ... *"
@@ -241,6 +241,8 @@
 
 </body>
 
+<!-- form -->
+<script src="./js/form.js"></script>
 <!-- typewriting js -->
 <script src="./js/typewriting.js" defer></script>
 <!-- reveal -->
