--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="container">
         <div class="about-content grid">
           <div class="about-left">
-            <img src="imgs/mannhy.jpg" alt="">
+            <img src="imgs/mannhy.jpg" alt="me self at tigre bridge in buenos aieres" loading="lazy">
           </div>
           <div class="about-right">
             <div class="title">
@@ -102,19 +102,19 @@
 
           <div class="work-bottom grid">
             <div>
-              <span class="icon"><img src="imgs/wildlife-icon.png"></span>
+              <span class="icon"><img src="imgs/wildlife-icon.png" alt="panda png" loading="lazy"></span>
               <h3>Wildlife</h3>
             </div>
             <div>
-              <span class="icon"><img src="imgs/portrait-icon.png"></span>
+              <span class="icon"><img src="imgs/portrait-icon.png" alt="Portrait png" loading="lazy"></span>
               <h3>Portrait</h3>
             </div>
             <div>
-              <span class="icon"><img src="imgs/landscape-icon.png"></span>
+              <span class="icon"><img src="imgs/landscape-icon.png" alt="Landscape png" loading="lazy"></span>
               <h3>Landscape</h3>
             </div>
             <div>
-              <span class="icon"><img src="imgs/family-icon.png"></span>
+              <span class="icon"><img src="imgs/family-icon.png" alt="family logo png" loading="lazy"></span>
               <h3>Family</h3>
             </div>
           </div>
@@ -138,16 +138,16 @@
           </div>
 
           <div class="portfolio-grid grid">
-            <div><img src="imgs/avenidaNoche.jpg"></div>
-            <div><img src="imgs/persona.jpg"></div>
-            <div><img src="imgs/mom.jpg"></div>
+            <div><img src="imgs/avenidaNoche.jpg" alt="avenida de noche" loading="lazy"></div>
+            <div><img src="imgs/persona.jpg" alt="persona en el parque" loading="lazy"></div>
+            <div><img src="imgs/mom.jpg" alt="retrato de mi madre" loading="lazy"></div>
             <div><img src="imgs/avenida2.jpg"></div>
-            <div><img src="imgs/atardecerObelisco.jpg"></div>
-            <div><img src="imgs/bici.jpg"></div>
-            <div><img src="imgs/iglesia.jpg"></div>
-            <div><img src="imgs/ajedrez.jpg"></div>
-            <div><img src="imgs/chevy.jpg"></div>
-            <div><img src="imgs/trafico.jpg"></div>
+            <div><img src="imgs/atardecerObelisco.jpg" alt="atardecer en el obelisco" loading="lazy"></div>
+            <div><img src="imgs/bici.jpg" alt="foto de bici vieja" loading="lazy"></div>
+            <div><img src="imgs/iglesia.jpg" alt="foto de iglesia" loading="lazy"></div>
+            <div><img src="imgs/ajedrez.jpg" alt="tablero de ajedrez" loading="lazy"></div>
+            <div><img src="imgs/chevy.jpg" alt="chevy obsidado" loading="lazy"></div>
+            <div><img src="imgs/trafico.jpg" alt="foto del trafico" loading="lazy"></div>
           </div>
         </div>
       </div>
@@ -190,7 +190,7 @@
           </div>
 
           <div class="contact-right">
-            <img src="imgs/mannhy5.jpg" alt="contact image">
+            <img src="imgs/mannhy5.jpg" alt="contact image" loading="lazy">
           </div>
         </div>
       </div>
@@ -207,10 +207,10 @@
             </a>
           </div>
           <div class="insta-grid grid">
-            <div><img src="imgs/edificoAntiguo.jpg"></div>
-            <div><img src="imgs/moto.jpg"></div>
-            <div><img src="imgs/planta.jpg"></div>
-            <div><img src="imgs/edificioAntiguo2.jpg"></div>
+            <div><img src="imgs/edificoAntiguo.jpg" alt="foto edificio antiguo" loading="lazy"></div>
+            <div><img src="imgs/moto.jpg" alt="foto de moto" loading="lazy"></div>
+            <div><img src="imgs/planta.jpg" alt="foto de planta" loading="lazy"></div>
+            <div><img src="imgs/edificioAntiguo2.jpg" alt="foto edificio antiguo" loading="lazy"></div>
           </div>
         </div>
       </div>
@@ -222,7 +222,7 @@
       <div class="footer-content">
         <div>
           <h3>MANNHY MONTEVERDE</h3>
-          <div><img src="imgs/mannhy.jpg" "photo about me"></div>
+          <div><img src="imgs/mannhy.jpg" alt="photo about me" loading="lazy"></div>
         </div>
 
         <div>
