update fb adress

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" type="text/css" href="./css/style.css">
 
 </head>
-<!-- TODO: mejorar el perfomance de las fotos -->
+<!-- TODO: mejorar el perfomance de las fotos alojando en una base y traerlo como api-->
 
 <body>
   <header id="header" class="vh-100 flex">
@@ -31,12 +31,12 @@
 
         <ul class="social-links">
           <li>
-            <a href="#" class="flex">
+            <a href="https://www.facebook.com/mrmonteverde14" class="flex" target="_blank">
               <i class="fab fa-facebook-f"></i>
             </a>
           </li>
           <li>
-            <a href="https://www.instagram.com/mrpictures3/" class="flex">
+            <a href="https://www.instagram.com/mrpictures3/" class="flex" target="_blank">
               <i class="fab fa-instagram"></i>
             </a>
           </li>
