updated & add opengraph

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="lang" content="en">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="MrPictures">
+  <meta property="og:description" content="Photography portfolio">
+  <meta property="og:image:width" content="828" />
+  <meta property="og:image:height" content="450" />
+  <meta property="og:url" content="https://mrpicturesportfolio.netlify.app/">
+
   <title>MrPictures</title>
   <link rel="shortcut icon" href="./imgs/camera.png" type="image/x-icon">
 
@@ -51,7 +59,7 @@
       <div class="container">
         <div class="about-content grid">
           <div class="about-left">
-            <img src="imgs/mannhy.jpg" alt="me self at tigre bridge in buenos aieres" loading="lazy">
+            <img src="./imgs/mannhy.jpg" alt="me self at tigre bridge in buenos aieres" loading="lazy">
           </div>
           <div class="about-right">
             <div class="title">
@@ -133,7 +141,7 @@
             </a>
           </div>
 
-          <div class="portfolio-grid grid">
+          <div class="portfolio-grid grid" id="grid">
             <div><img src="imgs/avenidaNoche.jpg" alt="avenida de noche" loading="lazy"></div>
             <div><img src="imgs/persona.jpg" alt="persona en el parque" loading="lazy"></div>
             <div><img src="imgs/mom.jpg" alt="retrato de mi madre" loading="lazy"></div>
